fix header movement and improve style on small screens

--- a/style.css
+++ b/style.css
@@ -697,6 +697,32 @@ footer {
     height: fit-content;
     min-height: 100vh;
   }
+
+  /* HEADER */
+
+  header {
+    max-width: 100vw;
+  }
+
+  .header-container {
+    margin: 0.5rem;
+  }
+
+  .branding-link {
+    margin: 0;
+  }
+
+  a.nav-link,
+  .active {
+    margin: 0;
+    font-size: 0.8rem;
+  }
+
+  #header-nav-menu {
+    padding-left: 0;
+    margin-right: 1rem;
+  }
+
   /* ABOUT */
   .about-text {
     left: 10%;
